reorganised files, added partial styling to home page

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/button";
 
 @import "pages/home";
 // no need for _ and .scss
