--- a/src/style.css
+++ b/src/style.css
@@ -19,3 +19,26 @@ body {
   box-sizing: border-box; }
 
 /* padding doesnt get inherited, just a padding around the body */
+body {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  /* font-size: 16px; */
+  line-height: 1.7;
+  color: #777; }
+
+.heading-primary {
+  color: #55c57a;
+  font-size: 5rem;
+  text-decoration: underline; }
+
+.btn {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 1.5rem 4rem;
+  display: inline-block;
+  /* treated as if it was text element */
+  border-radius: 10rem;
+  font-size: 1.8rem; }
+
+.heading-primary {
+  margin: -4rem 0rem 0rem -2rem; }
