--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,10 +9,13 @@
 @import "base/utilities";
 
 @import "components/button";
+@import "components/form";
 
 @import "layout/grid";
 
 @import "pages/home";
+@import "pages/dashboard";
+
 // no need for _ and .scss
 
 
